--- a/src/main/resources/templates/giohang.html
+++ b/src/main/resources/templates/giohang.html
@@ -21,6 +21,16 @@
 <meta property="og:url" content="http://localhost:8080/giohang">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="vi_VN">
+<!-- Google tag (gtag.js) -->
+<script async
+	src="https://www.googletagmanager.com/gtag/js?id=G-WRE8MBQ5W6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WRE8MBQ5W6');
+</script>
 
 <!-- 🎨 CSS -->
 <link rel="stylesheet" th:href="@{/css/giohang.css}">
