--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -22,7 +22,16 @@
 	content="https://websitecaycanh.onrender.com/sanpham">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="vi_VN">
+<!-- Google tag (gtag.js) -->
+<script async
+	src="https://www.googletagmanager.com/gtag/js?id=G-WRE8MBQ5W6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-WRE8MBQ5W6');
+</script>
 <link rel="stylesheet" th:href="@{/css/sanpham.css}">
 <link
 	href="https://fonts.googleapis.com/css2?family=Parisienne&family=Quicksand:wght@400;500;600;700&display=swap"
